--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.8.1",
     "gatsby": "^4.8.0",
     "gatsby-background-image": "^1.6.0",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-emotion": "^7.8.0",
     "gatsby-plugin-gatsby-cloud": "^4.8.0",
     "gatsby-plugin-image": "^2.8.0",
@@ -17,6 +18,7 @@
     "gatsby-plugin-offline": "^5.8.0",
     "gatsby-plugin-react-helmet": "^5.8.0",
     "gatsby-plugin-sharp": "^4.8.0",
+    "gatsby-source-datocms": "^3.0.15",
     "gatsby-source-filesystem": "^4.8.0",
     "gatsby-transformer-sharp": "^4.8.0",
     "prop-types": "^15.8.0",
